[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]


[build-system]
requires = [
  "setuptools",
  "wheel",
  "torch",
  "pythonbasictools",
  "numpy",
  "matplotlib",
]
build-backend = "setuptools.build_meta"



[project]
name = "NeuroTorch"
dynamic = ["version", ]
description = "NeuroTorch: A PyTorch-based framework for deep learning in neuroscience"
authors = [
  { name="Jérémie Gince", email="gincejeremie@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "matplotlib>=3.5.2",
    "numpy>=1.22.3",
    "setuptools>=57.0.0",
    "torch>=1.11.0",
    "torchvision>=0.12.0",
    "tqdm>=4.64.0",
    "scikit-learn>=1.1.1",
    "psutil>=5.9.1",
    "pytest>=7.1.2",
    "docutils>=0.17.1",
    "scipy>=1.8.0",
    "six>=1.16.0",
    "pythonbasictools",
]

[tool.setuptools.dynamic]
version = {attr = "neurotorch.__version__"}
readme = {file = ["README.md"]}

[project.urls]
homepage = "https://neurotorch.github.io/NeuroTorch/"
Documentation = "https://neurotorch.github.io/NeuroTorch/"
Source = "https://github.com/NeuroTorch/NeuroTorch"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
