[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]


[build-system]
requires = [
  "setuptools",
  "wheel",
  "torch",
  "pythonbasictools",
  "numpy",
  "matplotlib",
]
build-backend = "setuptools.build_meta"



[project]
name = "NeuroTorch"
version = "0.0.2"
dynamic = ["readme"]
description = "NeuroTorch: A PyTorch-based framework for deep learning in neuroscience"
authors = [
  { name="Jérémie Gince", email="gincejeremie@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<4"
dependencies = [
    "matplotlib>=3.5.2",
    "numpy (>=1.22.3,<2.0.0)",
    "setuptools>=57.0.0",
    "torch (>=1.11.0)",
    "torchvision (>=0.12.0)",
    "tqdm>=4.64.0",
    "scikit-learn>=1.1.1",
    "psutil>=5.9.1",
    "scipy>=1.8.0",
    "six>=1.16.0",
    "pythonbasictools (>=0.0.1a11,<0.0.2)",
    "importlib-metadata (>=8.7.0,<9.0.0)",
]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[project.urls]
homepage = "https://neurotorch.github.io/NeuroTorch/"
Documentation = "https://neurotorch.github.io/NeuroTorch/"
Source = "https://github.com/NeuroTorch/NeuroTorch"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
package-mode = true
packages = [{include = "neurotorch", from="src"}]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pytest-json-report = "^1.5.0"
pytest = ">=7.0.1"
docutils = ">=0.18.1,<0.20"
mypy = "^1.15.0"
black = "^25.1.0"
nbmake = "^1.5.5"
build = "^1.2.2.post1"
wheel = "^0.45.1"
twine = "^6.1.0"


[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2.1,<6.3.0"
docutils = ">=0.18.1,<0.20"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-bibtex = ">=2.5.0,<2.6.0"
sphinx-theme = "^1.0"
groundwork-sphinx-theme = "^1.1.1"
karma-sphinx-theme = "^0.0.8"
sphinx-mdinclude = "^0.6.2"



[tool.poetry.group.tutorials.dependencies]
h5py = "^3.13.0"
norse = "<1.1.0"
swig = "^4.3.1"
gym = ">=0.26.0,<0.27.0"
box2d = "2.3.10"
pygame = ">=2.0.0,<2.1.0"

[[tool.mypy.overrides]]
module = [
    "pythonbasictools",
]
ignore_missing_imports = true
